[project]
name = "gtfs-jp-kit"
version = "12.0.1"
description = "A fork of gtfs_kit Python library for analyzing GTFS JP feeds."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Raichev", email = "araichev@mrcagney.com" },
    { name = "Kushal Chattopadhyay", email = "kushalfremont@gmail.com" },
]
dependencies = [
    "shapely>=1.8",
    "json2html>=1",
    "geopandas>=1",
    "rtree>=0",
    "folium>=0",
    "requests>=2",
    "pandas>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=6",
    "sphinx>=3",
    "pre-commit-uv>=0",
    "matplotlib>=1",
    "pytest-socket>=0",
    "ruff>=0.0.257",
    "publish_sphinx_docs>=1.0",
    "marimo>=0.13.2",
    "mapclassify>=2.8.1",
    "plotly>=6.1.2",
    "mypy>=1.18.2",
]

[project.urls]
Repository = "https://github.com/kushal-chat/gtfs_jp_kit"
Documentation = "https://mrcagney.github.io/gtfs_kit_docs"
Reference = "https://www.mlit.go.jp/sogoseisaku/transport/content/001419163.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["gtfs_jp_kit"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.ruff]
line-length = 90
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "E731", "F401", "F403"]
exclude = ["notebooks/*.py"]

[tool.marimo.runtime]
output_max_bytes = 20_000_000
